--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,92 @@
 ---
 ---
 
+@inproceedings{li-etal-2024-translation,
+    selected=false,
+    abbr={ACL},
+    url={https://aclanthology.org/2024.acl-long.372/},
+    pdf={https://aclanthology.org/2024.acl-long.372.pdf},
+    code={https://github.com/UAlberta-NLP/KinshipAutoLex}, 
+    title = "Translation-based Lexicalization Generation and Lexical Gap Detection: Application to Kinship Terms",
+    author = "Li, Senyu  and
+      Hauer, Bradley  and
+      Shi, Ning  and
+      Kondrak, Grzegorz",
+    editor = "Ku, Lun-Wei  and
+      Martins, Andre  and
+      Srikumar, Vivek",
+    booktitle = "Proceedings of the 62nd Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)",
+    month = aug,
+    year = "2024",
+    address = "Bangkok, Thailand",
+    publisher = "Association for Computational Linguistics",
+    doi = "10.18653/v1/2024.acl-long.372",
+    pages = "6891--6900",
+    abstract = "Constructing lexicons with explicitly identified lexical gaps is a vital part of building multilingual lexical resources. Prior work has leveraged bilingual dictionaries and linguistic typologies for semi-automatic identification of lexical gaps. Instead, we propose a generally-applicable algorithmic method to automatically generate concept lexicalizations, which is based on machine translation and hypernymy relations between concepts. The absence of a lexicalization implies a lexical gap. We apply our method to kinship terms, which make a suitable case study because of their explicit definitions and regular structure. Empirical evaluations demonstrate that our approach yields higher accuracy than BabelNet and ChatGPT. Our error analysis indicates that enhancing the quality of translations can further improve the accuracy of our method."
+}
+
+@inproceedings{riley-etal-2025-semi,
+    selected=false,
+    abbr={COLING},
+    url={https://aclanthology.org/2025.coling-main.419/},
+    pdf={https://aclanthology.org/2025.coling-main.419.pdf},
+    code={https://github.com/jai-riley/Sense-Projection},
+    title = "Semi-Automated Construction of Sense-Annotated Datasets for Practically Any Language",
+    author = "Riley, Jai  and
+      Hauer, Bradley  and
+      Hriti, Nafisa Sadaf  and
+      Luo, Guoqing  and
+      Mirzaei, Amirreza  and
+      Rafiei, Ali  and
+      Sheikhi, Hadi  and
+      Siavashpour, Mahvash  and
+      Tavakoli, Mohammad  and
+      Shi, Ning  and
+      Kondrak, Grzegorz",
+    editor = "Rambow, Owen  and
+      Wanner, Leo  and
+      Apidianaki, Marianna  and
+      Al-Khalifa, Hend  and
+      Eugenio, Barbara Di  and
+      Schockaert, Steven",
+    booktitle = "Proceedings of the 31st International Conference on Computational Linguistics",
+    month = jan,
+    year = "2025",
+    address = "Abu Dhabi, UAE",
+    publisher = "Association for Computational Linguistics",
+    pages = "6270--6284",
+    abstract = "High-quality sense-annotated datasets are vital for evaluating and comparing WSD systems. We present a novel approach to creating parallel sense-annotated datasets, which can be applied to any language that English can be translated into. The method incorporates machine translation, word alignment, sense projection, and sense filtering to produce silver annotations, which can then be revised manually to obtain gold datasets. By applying our method to Farsi, Chinese, and Bengali, we produce new parallel benchmark datasets, which are vetted by native speakers of each language. Our automatically-generated silver datasets are of higher quality than the annotations obtained with recent multilingual WSD systems, particularly on non-European languages."
+}
+
+@inproceedings{shi-etal-2025-ualberta,
+    selected=true,
+    abbr={SemEval},
+    url={https://aclanthology.org/2025.semeval-1.224/},
+    pdf={https://aclanthology.org/2025.semeval-1.224.pdf},
+    code={https://github.com/UAlberta-NLP/SemEval2025-EAMT},
+    title = "{UA}lberta at {S}em{E}val-2025 Task 2: Prompting and Ensembling for Entity-Aware Translation",
+    author = "Shi, Ning  and
+      Basil, David  and
+      Hauer, Bradley  and
+      Nawal, Noshin  and
+      Riley, Jai  and
+      Teodorescu, Daniela  and
+      Zhang, John  and
+      Kondrak, Grzegorz",
+    editor = "Rosenthal, Sara  and
+      Ros{\'a}, Aiala  and
+      Ghosh, Debanjan  and
+      Zampieri, Marcos",
+    booktitle = "Proceedings of the 19th International Workshop on Semantic Evaluation (SemEval-2025)",
+    month = jul,
+    year = "2025",
+    address = "Vienna, Austria",
+    publisher = "Association for Computational Linguistics",
+    pages = "1709--1717",
+    ISBN = "979-8-89176-273-2",
+    abstract = "We describe the methods used by our UAlberta team for the SemEval-2025 Task 2 on Entity-Aware Machine Translation (EA-MT). Our methods leverage large language models with prompt engineering strategies suited to this task, including retrieval augmented generation and in-context learning. Our best results overall are obtained with ensembles of multiple models, leveraging named entity knowledge in the dataset. Finally, we provide proof-of-concept experiments showing that lexico-semantic knowledge can be used to identify high-quality translations. We further demonstrate that our methods can function even without gold named entity translations, by using an alternative knowledge base such as BabelNet."
+}
+
 @article{zhang2024crossmodalconsistencymultimodallarge,
       abbr={arXiv}, 
       arxiv={2411.09273}, 
